Add global session polluted benchmark